--- a/src/index.css
+++ b/src/index.css
@@ -15,19 +15,20 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #32cfff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #9bfdf8;
 }
 
 body {
-  margin: 0;
-  display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 520px;
   min-height: 100vh;
+  display: flex;
+  align-items: start;
+  margin: auto;
 }
 
 h1 {
@@ -47,7 +48,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #9bfdf8;
 }
 button:focus,
 button:focus-visible {
@@ -60,7 +61,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #9bfdf8;
   }
   button {
     background-color: #f9f9f9;
