--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,11 +1,18 @@
-.footer{
-    position: absolute;
-    bottom: 0;
+.footer {
     min-width: 100vw;
     margin: 0;
-    margin-bottom: 20px;
-    padding-top: 10px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+
     border-top: solid;
     border-width: 1px;
-    border-color: rgb(218, 218, 218);
+    border-color: rgb(137, 158, 170);
+
+    background-color: rgba(249, 250, 250, 0.329);
+
+    background: rgba(92, 124, 158, 0.404);
+    background: linear-gradient(90deg, rgba(92, 124, 158, 0.795) 42%, rgba(42, 173, 182, 0.678) 96%);
+
+    backdrop-filter: blur(4px);
+    color: rgba(255, 255, 255, 0.486);
 }
