--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,28 +1,37 @@
 .header {
-    background-color: rgb(92, 124, 158);
-    margin: 0;
-    padding: 15px;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  min-height: 50px;
+  background: rgb(92, 124, 158);
+  background: linear-gradient(90deg, rgba(92, 124, 158, 0.795) 42%, rgba(42, 173, 182, 0.678) 96%);
+  backdrop-filter: blur(5px);
+
+  border-bottom: solid;
+  border-width: 1px;
+  border-color: rgba(137, 158, 170, 0.712);
+  
+  margin: 0;
+  padding: 20px;
+  padding-top: 15px;
+
+  flex-grow: 1;
+  flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
-.logocontainer{
+.logocontainer {
   display: flex;
   flex-direction: row;
   gap: 10px;
 }
 
-h1{
+h1 {
   margin: 0;
-  margin-top: 3px;
   padding: 0;
-  font-size:x-large;
   flex-grow: 1;
 }
 
-img{
+img {
   padding: 0;
   margin: 0;
   height: 30px;
@@ -30,39 +39,42 @@ img{
   flex-grow: 1;
 }
 
-ul {
-    margin: 0;
-    list-style-type: none;
-    display: flex;
-    gap: 20px;
-    justify-content: end;
-  }
-  
-  li {
-    padding: 5px 10px;
-    align-self: center;
-    transition: 200ms background-color;
-    border-radius: 3px;
-    user-select: none;
-    cursor: pointer;
-  }
-  
-  li:hover {
-    background-color: #373737;
+nav {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  gap: 30px;
+  justify-content: end;
+}
+
+.navitem {
+  padding-left: 10px;
+  padding-right: 10px;
+  align-self: center;
+  transition: 200ms background-color;
+  border-radius: 3px;
+  user-select: none;
+  cursor: pointer;
+  font-size: x-large;
+}
+
+.navitem:hover {
+  background-color: rgb(92, 124, 158)
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
   }
 
-  @keyframes logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-  
-    to {
-      transform: rotate(360deg);
-    }
+  to {
+    transform: rotate(360deg);
   }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .react-logo {
-      animation: logo-spin infinite 20s linear;
-    }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .react-logo {
+    animation: logo-spin infinite 20s linear;
   }
+}
