--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
 #root {
   max-width: 1280px;
   text-align: center;
-  min-width: 100vw;
   min-height: 100vh;
+  display: flex;
+}
+
+.viewport-grid{
+  flex-grow: 1;
+  display: grid;
+  grid-template-rows: max-content auto 50px;
 }
 
 .logo {
