--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -1,5 +1,13 @@
 .homeGrid {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 3fr;
     gap: 30px;
+}
+
+.infoColumn{
+    min-width: 150px;
+    max-width: max-content;
+    position: sticky;
+    top: 25px;
+    height: 50vh;
 }
