--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -31,7 +31,7 @@ h1 {
   flex-grow: 1;
 }
 
-img {
+header img {
   padding: 0;
   margin: 0;
   height: 30px;
@@ -49,18 +49,26 @@ nav {
 }
 
 .navitem {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 13px;
+  padding-right: 13px;
   align-self: center;
   transition: 200ms background-color;
   border-radius: 3px;
   user-select: none;
   cursor: pointer;
   font-size: x-large;
+  border-top: solid;
+  border-right: solid;
+  border-width: 1px;
+  border-color: rgba(114, 149, 187, 0);
 }
 
 .navitem:hover {
-  background-color: rgb(92, 124, 158)
+  background-color: rgb(92, 124, 158);
+  border-top: solid;
+  border-right: solid;
+  border-width: 1px;
+  border-color: rgba(114, 149, 187, 0.445);
 }
 
 @keyframes logo-spin {
