--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
 #root {
-  max-width: 1280px;
   text-align: center;
   min-height: 100vh;
   display: flex;
+  padding: 0;
+  margin: 0;
 }
 
 .viewport-grid{
