--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,8 +1,9 @@
 .header {
   min-height: 50px;
   background: rgb(92, 124, 158);
-  background: linear-gradient(90deg, rgba(92, 124, 158, 0.795) 42%, rgba(42, 173, 182, 0.678) 96%);
+  background: linear-gradient(90deg, rgba(92, 124, 158, 0.795) 42%, rgba(31, 143, 151, 0.801) 96%);
   backdrop-filter: blur(5px);
+  z-index: 1;
 
   border-bottom: solid;
   border-width: 1px;
@@ -17,6 +18,9 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+
+  position: sticky;
+  top: 0;
 }
 
 .logocontainer {
