--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -1,13 +1,27 @@
 .homeGrid {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
     gap: 30px;
 }
 
-.infoColumn{
+.infoColumn {
     min-width: 200px;
     max-width: max-content;
-    position: sticky;
-    top: 125px;
     height: 50vh;
+}
+
+.repoColumn {
+    min-width: 300px;
+}
+
+@media screen and (min-width: 700px) {
+    .homeGrid {
+        grid-template-columns: 1fr 3fr;
+    }
+
+    .infoColumn{
+        position: sticky;
+        top: 125px;
+    }
 }
