--- a/src/components/repocollection/RepoCollection.module.css
+++ b/src/components/repocollection/RepoCollection.module.css
@@ -40,7 +40,7 @@
 }
 
 .repoFooter {
-    max-height: 50px;
+    max-height: 45px;
     padding-top: 10px;
     display: flex;
     justify-content: space-between;
@@ -57,7 +57,8 @@
     background-color: rgba(70, 121, 145, 0.658);
     padding: 5px 10px 5px 10px;
     border-radius: 5px;
-    margin-left: 15px;
+    margin-left: 10px;
+    overflow: hidden;
 }
 
 .repoFooter .live {
