--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -1,4 +1,5 @@
 .homeGrid {
+    margin-top:25px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
@@ -6,7 +7,7 @@
 }
 
 .infoColumn {
-    min-width: 200px;
+    min-width: 260px;
     max-width: max-content;
     height: min-content;
 }
