--- a/src/components/userinfo/UserInfo.module.css
+++ b/src/components/userinfo/UserInfo.module.css
@@ -20,7 +20,7 @@
     border-right: solid;
     border-width: 1px;
     border-color: rgb(216, 203, 203);
-    margin: -25px 0 15px -25px;
+    margin: -35px 0 0 -35px;
     padding: 0;
     flex-grow: 1;
 }
@@ -34,4 +34,10 @@
     text-align: left;
     padding: 0;
     margin: 0;
+}
+
+.locationSubtitle {
+    color: rgb(21, 127, 133);
+    font-style: italic;
+    padding-bottom: 5px;
 }
