Adds styling to account for multiple card components in the column.

--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -6,6 +6,10 @@
 }
 
 .infoColumn {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    text-align: left;
     min-width: 260px;
     max-width: max-content;
     height: min-content;
