--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -1,3 +1,4 @@
+/* HOME page */
 .homeGrid {
     display: grid;
     grid-template-columns: 1fr;
@@ -15,13 +16,18 @@
     height: min-content;
 }
 
+/* GUEST BOOK */
+.guestBook {
+    padding: 15px;
+}
 
+/* MEDIA QUERIES */
 @media screen and (min-width: 900px) {
     .homeGrid {
         grid-template-columns: 1fr 3fr;
     }
 
-    .infoColumn{
+    .infoColumn {
         position: sticky;
         top: 175px;
     }
